# chucknorris

./: LICENSE  README.md  TODO
android/: .gitignore
android/app/: build.gradle
android/app/src/androidTest/java/com/chucknorris/: ChuckNorrisInstrumentedTest.java  ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/chucknorris/: ChuckNorrisLib.java  MainActivity.java
android/app/src/main/jniLibs/x86_64/: .gitignore
android/app/src/main/res/layout/: activity_main.xml  content_main.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
c/: main.c  test.sh
conan-recipes/sqlite3/: CMakeLists.txt  FindSQLite3.cmake  conanfile.py  conanmanifest.txt  test.cpp
cpp/: CMakeLists.txt  android-build.sh  conanfile.py  conanfile.txt
cpp/ChuckNorris/: CMakeLists.txt  android-build.sh  conanfile.py  conanfile.txt  ios_build.py
cpp/ChuckNorris/include/: ChuckNorris.hpp  chucknorris.h  chucknorris.hpp
cpp/ChuckNorris/src/: ChuckNorris.cpp  c_wrapper.cpp  chucknorris.cpp  main.c  main.cpp
cpp/conan-recipes/sqlite3/: CMakeLists.txt  conanfile.py
cpp/conan/sqlite3/: CMakeLists.txt  conanfile.py
cpp/include/: chucknorris.h  chucknorris.hpp
cpp/src/: c_wrapper.cpp  chucknorris.cpp
ios/app/: Podfile
ios/app/ChuckNorris/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
ios/app/ChuckNorris.xcodeproj/: project.pbxproj
ios/app/ChuckNorris.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/app/ChuckNorris.xcworkspace/: contents.xcworkspacedata
ios/app/ChuckNorris/Base.lproj/: Main.storyboard
ios/bindings/: .gitignore  .travis.yml  ChuckNorrisBindings.podspec  LICENSE  README.md
ios/bindings/ChuckNorrisBindings/Classes/: CKChuckNorris+Private.h  CKChuckNorris+Private.m  CKChuckNorris.h  CKChuckNorris.m
ios/bindings/Example/: Podfile
ios/bindings/Example/ChuckNorrisBindings.xcodeproj/: project.pbxproj
ios/bindings/Example/ChuckNorrisBindings.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/bindings/Example/ChuckNorrisBindings.xcodeproj/xcshareddata/xcschemes/: ChuckNorrisBindings-Example.xcscheme
ios/bindings/Example/ChuckNorrisBindings.xcworkspace/: contents.xcworkspacedata
ios/bindings/Example/Tests/: Tests.m
java/: .gitignore  build.gradle  settings.gradle
java/src/main/java/com/chucknorris/: ChuckNorris.java  ChuckNorrisLib.java
java/src/test/java/com/chucknorris/: ChuckNorrisTest.java
python/: .gitignore  Pipfile  build_chucknorris.py  chucknorris.py  setup.py
rust/: Cargo.toml  build.rs  cbindgen.toml
rust/src/: chucknorris.rs  lib.rs
(+6 files in other folders)
